--- a/pom.xml
+++ b/pom.xml
@@ -10,34 +10,28 @@
 
     <name>True Immutables for Java</name>
     <description>
-        TI4Jis a lightweight library designed to enforce true immutability in Java records. 
-        It uses AspectJ for runtime validation, ensuring that records annotated with Immutable follow strict immutability rules, checking all fields.
+        TI4Jis a lightweight library designed to enforce true immutability in Java classes and records.
+        It uses AspectJ for runtime validation, ensuring that classes and records annotated with Immutable follow strict
+        immutability rules, checking all fields.
     </description>
 
     <properties>
-        <kotlin.version>2.0.20</kotlin.version>
-        <java.min.version>17</java.min.version>
+        <java.version>16</java.version>
 
-        <maven.compiler.source>${java.min.version}</maven.compiler.source>
-        <maven.compiler.target>${java.min.version}</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.9.22.1</version>
+            <version>1.9.7</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.9.22.1</version>
+            <version>1.9.7</version>
         </dependency>
 
         <dependency>
@@ -52,46 +46,16 @@
             <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.13.0</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-maven-plugin</artifactId>
-                <version>${kotlin.version}</version>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <goals>
-                            <goal>test-compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.15.0</version>
+                <version>1.14.0</version>
                 <configuration>
-                    <complianceLevel>${java.min.version}</complianceLevel>
-                    <source>${java.min.version}</source>
-                    <target>${java.min.version}</target>
-                    <showWeaveInfo>true</showWeaveInfo>
+                    <complianceLevel>${java.version}</complianceLevel>
                 </configuration>
                 <executions>
                     <execution>
