--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.dpf</groupId>
     <artifactId>ti4j</artifactId>
-    <version>${revision}</version>
+    <version>0.2.2-experimental</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -14,7 +14,6 @@
     </modules>
 
     <properties>
-        <revision>0.2.1-experimental</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
