--- a/ti4j-processor/pom.xml
+++ b/ti4j-processor/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.dpf</groupId>
         <artifactId>ti4j</artifactId>
-        <version>${revision}</version>
+        <version>0.2.2-experimental</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.dpf</groupId>
             <artifactId>ti4j-core</artifactId>
-            <version>${revision}</version>
+            <version>0.2.2-experimental</version>
         </dependency>
 
         <dependency>
