feat: add reflections nad make it dynamic

--- a/ti4j-processor/pom.xml
+++ b/ti4j-processor/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>byte-buddy-agent</artifactId>
             <version>${byte-buddy.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
