--- a/ti4j-processor/pom.xml
+++ b/ti4j-processor/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <byte-buddy.version>1.12.12</byte-buddy.version>
+        <classgraph.version>4.8.157</classgraph.version>
     </properties>
 
     <dependencies>
@@ -34,10 +35,20 @@
             <version>${byte-buddy.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.reflections</groupId>
-            <artifactId>reflections</artifactId>
-            <version>0.10.2</version>
-            <scope>compile</scope>
+            <groupId>io.github.classgraph</groupId>
+            <artifactId>classgraph</artifactId>
+            <version>${classgraph.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
